--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,11 @@
 # Check https://circleci.com/docs/2.0/language-ruby/ for more details
 #
 version: 2
+general:
+  branches:
+    only:
+     - master
+     - develop
 jobs:
   build:
     docker:
