--- a/config.yml
+++ b/config.yml
@@ -13,16 +13,19 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/ruby:2.4.1-node-browsers
+        environment:
+          PG_HOST: localhost
+          PG_USER: ubuntu
+          RAILS_ENV: test
+          RACK_ENV: test
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       - image: circleci/postgres:9.6
         environment:
-          POSTGRES_USER: macbookpro
-          POSTGRES_PASS: 'Dung123#'
-          POSTGRES_DB: counterdb2
-          POSTGRES_PORT: 6543
+          POSTGRES_USER: ubuntu
+          POSTGRES_DB: db_name
 
     working_directory: ~/repo
 
@@ -63,7 +66,8 @@ jobs:
                             --out /tmp/test-results/rspec.xml \
                             --format progress \
                             $TEST_FILES
-
+        environment:
+          DATABASE_URL: "postgres://ubuntu@localhost:5432/test_dbcounter2?schema_search_path=public,view_10"
       # collect reports
       - store_test_results:
           path: /tmp/test-results
