--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ defaults: &defaults
       environment:
         RAILS_ENV: test
         PGHOST: 127.0.0.1
-        DATABASE_URL: "postgres://ubuntu@localhost:5432/oferta_test"
+        DATABASE_URL: "postgres://ubuntu@localhost:5432/oferta_test?schema_search_path=public,view_10"
     - image: circleci/postgres:9.4
       environment:
         POSTGRES_USER: ubuntu
